Ajustando pra thred virtual